# HftSimulator

./: .gitignore  CMakeLists.txt  HftSimulator  README.md  build.sh  git_commit_summary  git_commit_summary.sh
build_archive/: config.json
build_archive/Debug/src/listener_app/: listener_app
build_archive/Debug/src/replayer_app/: replayer_app
data/: MSFT-c10000-sF-p1.000000.itch  capture.sbe  default.itch
docs/: SpScRingBuffer.md
include/: AtomicArithmetic.h  hft_pinned_thread.h  itch_connection.h  itch_file_generator.h  itch_message.h  itch_processor.h  itch_sender.h  itch_udp_listener.h  itch_udp_replayer.h  spsc_ringbuffer.h
scripts/: buildDebug.sh
src/: AtomicArithmetic.cpp  main  main.cpp
src/common/: CMakeLists.txt  captured_message.h  constants.h  cpu_pause.h  hton_utils.h  itch_file_generator.h  itch_listener.h  itch_message.h  itch_message_udp_replayer.h  itch_udp_listener.h  pinned_thread.h  ring_buffer_consumer.h  ring_buffer_consumer_internal.h  spsc_ringbuffer.h  spsc_ringbuffer_consumer.h  spsc_ringbuffer_consumer_internal.h  strategy_buysellcount.h
src/listener_app/: CMakeLists.txt  main_listener.cpp
src/main.dSYM/Contents/Resources/DWARF/: main
src/main.dSYM/Contents/Resources/Relocations/aarch64/: main.yml
src/md_generator_app/: CMakeLists.txt  main_generator.cpp
src/replayer_app/: CMakeLists.txt  main_replayer.cpp
src/strategies/: CMakeLists.txt  micro_mean_reversion_strategy.h
tests/: CMakeLists.txt  test_hft_pinned_thread.cpp  test_spsc_ringbuffer.cpp
